MGRENTITLE-19 Add validaiton for formattedStageId parameter